commit with comment

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#storing the dataset\n",
     "import csv\n",
     "headers = []\n",
     "rows = []\n",
