commiting final version

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#storing the dataset\n",
+    "#importing and storing the dataset\n",
     "import csv\n",
     "headers = []\n",
     "rows = []\n",
